fix profile photo alignment in iphone

--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body {
 
 }
 .organizer {
-    max-height: 90%;
+    max-width: fit-content;
+    max-height: 100%;
 }
 .boxContainer {
     width: 375px;
@@ -44,10 +45,12 @@ body {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-
+    box-shadow: 0 0 5rem rgba(0, 0, 0, 0.5);
+    transition: 250ms;
 }
 
 #heroImg {
+    display: block;
     width: 100%;
 }
 .profileDetails {
@@ -65,11 +68,10 @@ body {
     align-items: center;
 }
 #profilePhoto {
+    display: block;
     border-radius: 100%;
     border: 0.35rem solid #fff;
     position: absolute;
-    margin: 2rem 0;
-
 }
 .profileNameAndAge {
     margin-top: 4rem;
@@ -113,14 +115,14 @@ h2#location {
 .attribution a {
     color: #fff;
 }
-@media all and (max-width: 376px) {
+@media all and (max-width: 375px) {
     .mainBackground {
         height: 100%;
         background-position: -12rem -34rem, 43rem 14rem;
         background-size: 70%, 60%;
     }
     .organizer {
-        height: 50%;
+        height: 80%;
         max-width: 375px;
     }
 }
